bump pom dependencies for java 11